--- a/adventure_allies/src/app/globals.css
+++ b/adventure_allies/src/app/globals.css
@@ -4,14 +4,14 @@
 
 @font-face {
   font-family: "chineseFont";
-  src: url("./fonts/Roboto.ttf") format("truetype");
+  src: url("../fonts/Roboto.ttf") format("truetype");
   font-style: normal;
   unicode-range: U+4E00-9FFF; /* 中文 */
 }
 
 @font-face {
   font-family: "englishFont";
-  src: url("./fonts/GemunuLibre.ttf") format("truetype");
+  src: url("../fonts/GemunuLibre.ttf") format("truetype");
   font-style: normal;
   unicode-range: U+0041-005A, U+0061-007A, U+0030-0039, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E; /* 大寫拉丁字母、小寫拉丁字母、數字、常見標點符號和特殊符號 */
 }
